--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,7 +14,7 @@ services:
   app:
     build:
       context: .
-      dockerfile: ./Dockerfile
+      dockerfile: ./app/Dockerfile
     volumes:
       - ./app/src:/var/www/html
     links:
@@ -36,6 +36,6 @@ services:
     container_name: mysql
     volumes:
       - ./mysql/init:/docker-entrypoint-initdb.d
-      - ./mysql/data:/var/lib/mysql
+      - ./mysql-data:/var/lib/mysql
     ports:
       - 3306:3306
