xdebugを動くようにしたい

--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -5,3 +5,5 @@ RUN apk upgrade --update && \
   pecl install -f xdebug-2.7.0beta1 && \
   docker-php-ext-enable xdebug && \
   docker-php-ext-install pdo_mysql
+
+ADD override.ini /usr/local/etc/php/conf.d/overrides.ini
