--- a/app/override.ini
+++ b/app/override.ini
@@ -10,7 +10,15 @@ opcache.max_accelerated_files=4000
 opcache.revalidate_freq=60
 opcache.fast_shutdown=1
 xdebug.remote_enable=1
-xdebug.remote_connect_back=Off
+xdebug.remote_port=9900
 xdebug.idekey="PHPSTORM_REMOTE"
-xdebug.remote_log="/tmp/xdebug_log"
+xdebug.remote_log="/tmp/xdebug.log"
 xdebug.remote_host="host.docker.internal"
+#xdebug.remote_host="docker.for.mac.localhost"
+xdebug.remote_connect_back=0
+
+xdebug.remote_autostart=1
+xdebug.cli_color=1
+xdebug.profiler_enable=0
+xdebug.remote_handler=dbgp
+xdebug.remote_mode=req
