--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -2,7 +2,7 @@ FROM php:7.3-fpm-alpine3.8
 
 RUN apk upgrade --update && \
   apk --no-cache add autoconf make g++ && \
-  pecl install -f xdebug-2.7.0beta1 && \
+  pecl install -f xdebug-2.7.0 && \
   docker-php-ext-enable xdebug && \
   docker-php-ext-install pdo_mysql
 
