--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -1,8 +1,8 @@
-FROM php:7.3-fpm-alpine3.8
+FROM php:7.4-fpm-alpine3.10
 
 RUN apk upgrade --update && \
   apk --no-cache add autoconf make g++ && \
-  pecl install -f xdebug-2.7.0 && \
+  pecl install xdebug && \
   docker-php-ext-enable xdebug && \
   docker-php-ext-install pdo_mysql
 
