--- a/app/override.ini
+++ b/app/override.ini
@@ -9,12 +9,13 @@ opcache.interned_strings_buffer=8
 opcache.max_accelerated_files=4000
 opcache.revalidate_freq=60
 opcache.fast_shutdown=1
+
+[xdebug]
 xdebug.remote_enable=1
 xdebug.remote_port=9900
 xdebug.idekey="PHPSTORM_REMOTE"
 xdebug.remote_log="/tmp/xdebug.log"
 xdebug.remote_host="host.docker.internal"
-#xdebug.remote_host="docker.for.mac.localhost"
 xdebug.remote_connect_back=0
 
 xdebug.remote_autostart=1
