--- a/app/override.ini
+++ b/app/override.ini
@@ -3,12 +3,13 @@ fastcgi.logging=1
 opcache.enable=1
 opcache.optimization_level=0x7FFFBBFF
 opcache.revalidate_freq=0
-opcache.validate_timestamps=1
+opcache.validate_timestamps=0
 opcache.memory_consumption=128
 opcache.interned_strings_buffer=8
 opcache.max_accelerated_files=4000
 opcache.revalidate_freq=60
 opcache.fast_shutdown=1
+opcache.preload=/var/www/html/preload.php
 
 [xdebug]
 xdebug.remote_enable=1
