--- a/app/override.ini
+++ b/app/override.ini
@@ -10,6 +10,7 @@ opcache.max_accelerated_files=4000
 opcache.revalidate_freq=60
 opcache.fast_shutdown=1
 opcache.preload=/var/www/html/preload.php
+opcache.preload_user=root
 
 [xdebug]
 xdebug.remote_enable=1
